--- a/fuzzylearn/.gitignore
+++ b/fuzzylearn/.gitignore
@@ -128,6 +128,7 @@ data/
 *.sage.py
 
 # Environments
+.env
 .env/
 .venv/
 env/
@@ -169,3 +170,7 @@ cython_debug/
 
 # vscode
 .vscode/
+.DS_Store
+fuzzylearn/.DS_Store
+
+# not important
