--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ zoish = "^2.1.0"
 
 [tool.poetry.group.dev.dependencies]
 ipykernel = "^6.20.1"
+black = "^23.3.0"
 
 [build-system]
 requires = ["poetry-core"]
