--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,20 +6,10 @@ authors = ["drhosseinjavedani <h.javedani@gmail.com>"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = ">=3.10,<3.11"
-pandas = "^1.5.2"
-sklearn = "^0.0.post1"
-scipy = "^1.10.0"
-feature-engine = "^1.5.2"
-category-encoders = "^2.5.1.post0"
-xgboost = "^1.7.3"
-lightgbm = "^3.3.5"
-zoish = "^2.1.0"
+python = "3.8.5"
+wheel = "^0.40.0"
 
 
-[tool.poetry.group.dev.dependencies]
-ipykernel = "^6.20.1"
-black = "^23.3.0"
 
 [build-system]
 requires = ["poetry-core"]
