--- a/fuzzylearn/optimization_conf.yaml
+++ b/fuzzylearn/optimization_conf.yaml
@@ -8,6 +8,14 @@ number_of_intervals:
 threshold:
   - 0.1
   - 12.0
+fuzzy_type:
+  - simple
+  # TODO deep in helper has problem
+  #- deep
+  - triangular
+fuzzy_cut:
+  - 0.05
+  - 0.45
 metrics_with_smaller_is_better:
   - explained_variance_score
   - max_error
@@ -45,7 +53,7 @@ metrics_for_regression:
   - "mean_squared_error(y_true, y_pred)"
   - "mean_squared_log_error(y_true, y_pred)"
   - "median_absolute_error(y_true, y_pred)"
-  - "r2_score(y_true, y_pred)"
+#  - "r2_score(y_true, y_pred)"
 metrics_for_classification:
   - "accuracy_score(y_true, y_pred)"
   - "adjusted_mutual_info_score(y_true, y_pred)"
