--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -1,10 +1,10 @@
 # configuration for versioning using bumpversion
 
 [bumpversion]
-current_version = 3.5.0
+current_version = 1.2.0
 commit = True
 tag = True
 
 [bumpversion:file:pyproject.toml]
-[bumpversion:file:./lohrasb/__init__.py]
-[bumpversion:file:./lohrasb/version.py]
+[bumpversion:file:./fuzzylearn/__init__.py]
+[bumpversion:file:./fuzzylearn/version.py]
