--- a/Dockerfile.test
+++ b/Dockerfile.test
@@ -1,9 +1,9 @@
 
 
-FROM python:3.10
+FROM python:3.8.5
 
 RUN useradd -ms /bin/sh admin
-COPY --chown=admin:admin . /lohrasb
+COPY --chown=admin:admin . /fuzzylearn
  
 # Keeps Python from generating .pyc files in the container
 ENV PYTHONDONTWRITEBYTECODE 1
@@ -13,7 +13,7 @@ ENV username = $username
 ENV password = $password
 ENV gitusername = $gitusername
 ENV gitpassword = $gitpassword
-ENV POETRY_VERSION=1.3.2
+ENV POETRY_VERSION=1.5.1
 
 
 RUN apt-get update
@@ -21,13 +21,8 @@ RUN apt-get install -y --no-install-recommends         gnumeric
 RUN apt-get install -y --no-install-recommends python3-pip
 
 
-WORKDIR /lohrasb/lohrasb/data
-RUN curl -O -k 'https://archive.ics.uci.edu/ml/machine-learning-databases/00350/default%20of%20credit%20card%20clients.xls' 
-RUN  ssconvert default%20of%20credit%20card%20clients.xls data1.csv 
-RUN  grep -v "X1" data1.csv > data.csv
-
 # Install and setup poetry
-WORKDIR /lohrasb
+WORKDIR /fuzzylearn
 RUN pip3 install --upgrade pip
 RUN pip install "poetry==$POETRY_VERSION"
 RUN poetry config virtualenvs.create false 
